--- a/CompuMaster.TaskManagement.UIDemoApp/CompuMaster.TaskManagement.UIDemoApp.vbproj
+++ b/CompuMaster.TaskManagement.UIDemoApp/CompuMaster.TaskManagement.UIDemoApp.vbproj
@@ -16,7 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CompuMaster.TaskManagement.UI\CompuMaster.TaskManagement.UI.vbproj" />
+    <ProjectReference Include="..\CompuMaster.TaskManagement.UI\CompuMaster.TaskManagement.UI.WinForms.vbproj" />
+    <ProjectReference Include="..\CompuMaster.TaskManagement\CompuMaster.TaskManagement.vbproj" />
   </ItemGroup>
 
 </Project>
