moved dir CompuMaster.TaskManagement.UI to CompuMaster.TaskManagement.UI.WinForms

--- a/CompuMaster.TaskManagement.UIDemoApp/CompuMaster.TaskManagement.UIDemoApp.vbproj
+++ b/CompuMaster.TaskManagement.UIDemoApp/CompuMaster.TaskManagement.UIDemoApp.vbproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CompuMaster.TaskManagement.UI\CompuMaster.TaskManagement.UI.WinForms.vbproj" />
+    <ProjectReference Include="..\CompuMaster.TaskManagement.UI.WinForms\CompuMaster.TaskManagement.UI.WinForms.vbproj" />
     <ProjectReference Include="..\CompuMaster.TaskManagement\CompuMaster.TaskManagement.vbproj" />
   </ItemGroup>
 
