--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -1,52 +1,63 @@
 name: Build and Test
 
 # PREREQUISITES FOR PUSH-BACK OF TEST RESULTS
-# Please note: test project usually required nuget package JUnitTestLogger
-# to be able to provide JUnit compatible test results XML file (required
+# Please note: test project usually required nuget package JUnitTestLogger 
+# to be able to provide JUnit compatible test results XML file (required 
 # for pushing back details on succeeded/failed tests)
-#
+# 
 # NuGet install command:
 # - Install-Package JUnitTestLogger
 
 # Controls when the action will run.
 on:
-    # Triggers the workflow on push or pull request events but only for the master branch
+    # Triggers the workflow on push or pull request events but only for the main branch
     push:
-        branches: [master]
+        branches: [main]
     pull_request:
-        branches: [master]
+        branches: [main]
 
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
 
 env:
-    # Path to the solution file relative to the root of the project
-    SOLUTION_FILE_PATH: .
+  # Path to the solution file relative to the root of the project
+  SOLUTION_FILE_PATH: .
 
-    # Configuration type to build
-    BUILD_CONFIGURATION: Debug
-
-    BUILD_OUTPUT: CompuMaster.Calendar/bin/Debug
-    BUILD_OUTPUT_TEST: CompuMaster.Test.Calendar/bin/Debug
+  # Configuration type to build
+  BUILD_CONFIGURATION: CI_CD
 
 jobs:
+
     test:
         #needs: build
         runs-on: ${{ matrix.os }}
 
         strategy:
-            fail-fast: false
-            matrix:
-                os: [windows-latest, ubuntu-latest, macos-latest]
-                include:
-                    - os: macos-latest
-                      runNetExe: mono
+          fail-fast: false
+          matrix:
+            #arch: [x86, x86_64, arm]
+            os: [windows-latest, ubuntu-latest, macos-latest]
+            include: 
+              - os: macos-latest
+                runNetExe: mono
+              #  arch: x86_64
+              #- os: ubuntu-latest
+              #  arch: x86
+              #- os: ubuntu-latest
+              #  arch: x86_64
+              #- os: ubuntu-latest
+              #  arch: arm
+              - os: windows-latest
+                build_configuration_suffix: "_WIN"
+              #  arch: x86
+              #- os: windows-latest
+              #  arch: x86_64
 
         # the build-and-test job might be skipped, we don't need to run this job then
         #if: success() || failure()
 
         env:
-            RESULTS_PATH: TestResults.xml
+          RESULTS_PATH: TestResults.xml
 
         steps:
             - name: Checkout
@@ -55,7 +66,7 @@ jobs:
             - name: Setup .NET Core
               uses: actions/setup-dotnet@v4
               with:
-                  dotnet-version: 8.0.x
+                 dotnet-version: 8.0.x
 
             - name: Dir Listing (Win)
               if: startsWith(matrix.os, 'windows')
@@ -65,13 +76,13 @@ jobs:
               run: ls -la
 
             - name: Install dependencies
-              run: dotnet restore
+              run: dotnet restore /p:Configuration=CI_CD${{matrix.build_configuration_suffix}}
 
             - name: Build
-              run: dotnet build --configuration=${{env.BUILD_CONFIGURATION}} --no-restore
+              run: dotnet build --configuration=${{env.BUILD_CONFIGURATION}}${{matrix.build_configuration_suffix}} --no-restore 
 
             - name: Run Unit Tests
-              run: dotnet test --framework net8.0 --results-directory test-results --logger junit --configuration=${{env.BUILD_CONFIGURATION}} --no-restore
+              run: dotnet test --framework net8.0 --results-directory test-results --logger junit --configuration=${{env.BUILD_CONFIGURATION}}${{matrix.build_configuration_suffix}} --no-restore 
 
             - name: Dir Listing (Win) test-results
               if: startsWith(matrix.os, 'windows')
@@ -89,38 +100,28 @@ jobs:
               uses: EnricoMi/publish-unit-test-result-action@v2
               if: always() && startsWith(matrix.os, 'ubuntu')
               with:
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
-                  files: "test-results/TestResults.xml"
-                  check_run_annotations: all tests
-                  comment_title: Unit Test Statistics (${{matrix.os}})
-                  check_name: Unit Test Results (${{matrix.os}})
-                  report_individual_runs: true
-
-            - name: Unit Test Results (Mac)
-              uses: EnricoMi/publish-unit-test-result-action/macos@v2
-              if: always() && startsWith(matrix.os, 'macos')
+                github_token: ${{ secrets.GITHUB_TOKEN }}
+                files: "test-results/TestResults.xml"
+                check_run_annotations: all tests
+                comment_title: Unit Test Statistics (${{matrix.os}})
+                check_name: Unit Test Results (${{matrix.os}})
+                report_individual_runs: true
+      
+            - name: Unit Test Results (Win/Mac)
+              uses: EnricoMi/publish-unit-test-result-action/composite@v2
+              if: always() && (!(startsWith(matrix.os, 'ubuntu'))) 
               with:
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
-                  files: "test-results/TestResults.xml"
-                  check_run_annotations: all tests
-                  comment_title: Unit Test Statistics (${{matrix.os}})
-                  check_name: Unit Test Results (${{matrix.os}})
-                  report_individual_runs: true
-
-            - name: Unit Test Results (Win)
-              uses: EnricoMi/publish-unit-test-result-action/windows@v2
-              if: always() && startsWith(matrix.os, 'windows')
-              with:
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
-                  files: "test-results/TestResults.xml"
-                  check_run_annotations: all tests
-                  comment_title: Unit Test Statistics (${{matrix.os}})
-                  check_name: Unit Test Results (${{matrix.os}})
-                  report_individual_runs: true
-
+                github_token: ${{ secrets.GITHUB_TOKEN }}
+                files: "test-results/TestResults.xml"
+                check_run_annotations: all tests
+                comment_title: Unit Test Statistics (${{matrix.os}})
+                check_name: Unit Test Results (${{matrix.os}})
+                report_individual_runs: true
+      
             - name: Publish Unit Test Results
               uses: actions/upload-artifact@v4
               if: always()
               with:
-                  name: NUnit Test Results ${{ matrix.os }}
-                  path: test-results/TestResults.xml
+                name: NUnit Test Results ${{ matrix.os }}
+                path: test-results/TestResults.xml
+
