--- a/CompuMaster.TaskManagement.UIDemoApp/CompuMaster.TaskManagement.UIDemoApp.vbproj
+++ b/CompuMaster.TaskManagement.UIDemoApp/CompuMaster.TaskManagement.UIDemoApp.vbproj
@@ -6,6 +6,7 @@
     <StartupObject>Sub Main</StartupObject>
     <UseWindowsForms>true</UseWindowsForms>
     <UseWinForms>true</UseWinForms>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <MyType>Empty</MyType>
   </PropertyGroup>
 
