--- a/CompuMaster.TaskManagement.UIDemoApp/CompuMaster.TaskManagement.UIDemoApp.vbproj
+++ b/CompuMaster.TaskManagement.UIDemoApp/CompuMaster.TaskManagement.UIDemoApp.vbproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\CompuMaster.TaskManagement\CompuMaster.TaskManagement.vbproj" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+    <Reference Include="System.Resources.Extensions" />
+  </ItemGroup>
+
 </Project>
