final optimizations for nuget publishing and publish workflow

--- a/CompuMaster.TaskManagement.UIDemoApp/CompuMaster.TaskManagement.UIDemoApp.vbproj
+++ b/CompuMaster.TaskManagement.UIDemoApp/CompuMaster.TaskManagement.UIDemoApp.vbproj
@@ -9,6 +9,8 @@
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <MyType>Empty</MyType>
     <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
