--- a/CompuMaster.TaskManagement.UI.WinForms/CompuMaster.TaskManagement.UI.WinForms.vbproj
+++ b/CompuMaster.TaskManagement.UI.WinForms/CompuMaster.TaskManagement.UI.WinForms.vbproj
@@ -1,13 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>2024.11.07.100</Version>
+    <Version>2024.11.08.100</Version>
     <Title>CompuMaster.TaskManagement.UI.WinForms - MIT license edition</Title>
     <Company>CompuMaster GmbH</Company>
     <Authors>Jochen Wezel</Authors>
     <Product>CompuMaster.TaskManagement</Product>
     <Copyright>2023-2024 CompuMaster GmbH</Copyright>
-    <Version>2024.11.07.100</Version>
     <Configurations>Debug;CI_CD;Release</Configurations>
     <AnalysisLevel>latest-recommended</AnalysisLevel>
     <RootNamespace>CompuMaster.TaskManagement.UI.WinForms</RootNamespace>
@@ -27,6 +26,7 @@
     <RepositoryUrl>https://github.com/CompuMasterGmbH/CompuMaster.TaskManagement.git</RepositoryUrl>
     <Description>.NET UI library for Windows Forms with common methods for managing of (long-running) tasks/jobs with rollback/rollforward feature</Description>
     <PackageTags>CompuMaster Common Utils TaskManagement Progress Async Parallel Task Job Management UI Windows Forms</PackageTags>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net48|AnyCPU'">
@@ -51,6 +51,11 @@
     <None Include="..\logo_64x64.png" Link="logo_64x64.png">
       <PackagePath></PackagePath>
       <Pack>True</Pack>
+    </None>
+    <None Include="..\README.md" Pack="true" PackagePath="\">
+      <Link>README.md</Link>
+      <PackagePath>/</PackagePath>
+      <Pack>True</Pack>   
     </None>
   </ItemGroup>
 
